# statskit

./: .gitignore  README.md  pyproject.toml
statskit/: statskit.py
tests/: test_statskit.py
