[project]
name = "statskit"
version = "0.1.0"
description = "A toolbox of statistical methods."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "numpy==1.25.2",
    "scipy==1.11.2",
]

[tool.setuptools]
packages = ["statskit"]
